Mon Jun 14 10:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSConcreteValue.m: Update for MacOS-X and for GC
	* Source/NSCTemplateValue.m: Update for MacOS-X and for GC
	* Source/NSNumber.m: Update for MacOS-X and for GC, optimised
	* Source/NSConcreteNumber.m: Update for MacOS-X and for GCC, optimised
	* Source/NSValue.m: Update for MacOS-X and for GC
	* Source/include/NSValue.h: Update for MacOS-X and for GC

Sat Jun 12 15:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSConcreteValue.m: Implemented [hash and isEqualToValue
	* Source/include/NSConcreteValue.h: Change NSString ivar to char* for
	performance reasons.
	* Source/NSCTemplateValue.m: Implemented hash and optimised.

Thu Jun  4 13:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCharacterSet.m: prepare for GC
	* Source/NSString.m: prepare for GC
	* Source/NSTimer.m: tidied and added timeInterval method
	* Source/include/NSTimer.h: tidied and added timeInterval method
	* Source/NSArchiver.m: Fixed memory leak in ([-init])

Tue Jun  2 10:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSSerializer.m: Added uniquing for deserialized strings.
	* Source/include/NSSerialization.h: likewise.

Tue Jun  2  5:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/TcpPort.m: Fixed to compile cleanly under cygwin.
	* Source/UnixFileHandle.m: ditto
	* Source/NSHost.m: ditto
	* Source/NSProcessInfo.m: ditto
	* Source/NSRunLoop.m: ditto

Fri May 28 14:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSString.m: Fixed error on growing mutable strings - could
	cause unreasonable growth when generating property lists.

Thu May 27 11:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArchiver.m: Fix memory leak reported by
	frederic.chauvin@lemel.fr and ready for garbage collection.
	* Source/NSUnarchiver.m: Ready for garbage collection.